# foundation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPRECATED.md  README.md  Readme.md  dag_dump_old.json  debug_old_cube.py  debug_old_material.py  pyproject.toml  requirements.txt  test_old_custom.py
.github/workflows/: pre-commit.yml  publish-pypi.yml  python.yml
cadbuildr/: __init__.py
cadbuildr/foundation/: __init__.py  cli.py  compute_functions.py  constants.py  dag_utils.py  draw.py  foundation_hooks.py  helpers.py  math_utils.py  pattern.py  shape_methods.py  sheet_metal.py  sheet_metal_materials.py  utils.py  utils_webrtc.py  utils_websocket.py
cadbuildr/foundation/coms/: kernel_api.py  screenshot_framing.py  (+1 more)
cheatsheet/: categories.md  cheatSheet.md  generate_prompt.py  groups.json  prompt.md
src/foundation/: __init__.py  exceptions.py  utils.py  utils_ext.py  utils_websocket.py
tests/: test_serialize.py  test_tree.py  test_utils.py  utils.py
tests/examples/: __init__.py  brady_laptop_holder.py  butterfly_cone.py  cube.py  cylinder.py  double_cylinder.py  lego_fort.py  pipe.py  pyramids.py  sk.py  small_table.py  square_tube_frame.py  table.py  webrtc_demo.py
tests/geometry/: test_frame.py  test_transform3d.py
tests/sketch/: test_draw.py  test_line.py  test_point.py
tests/types/: test_dag_caching.py  test_is_union_type.py  test_node_children.py
tests/unit/: test_anchors.py  test_arc_family.py  test_auto_registration.py  test_bezier_bspline.py  test_box.py  test_canonical_json.py  test_chained_compute_eval.py  test_class_name_slugs.py  test_color.py  test_cone.py  test_connection.py  test_cube.py  test_cut_field.py  test_cylinder.py  test_dag_hooks.py  test_ellipse_arc.py  test_extrusion_variants.py  test_finder_rule_expansion.py  test_grid_locations.py  test_helix2d.py  test_hex_locations.py  test_hole_variants.py  test_joint_math.py  test_joint_serialization.py  test_joints.py  test_line_extrusion_plane.py  test_locations.py  test_loose_end_expands.py  test_many_legos_deterministic.py  test_mirror_boundingbox.py  test_offset2d.py  test_parameters_decorator.py  test_polar_locations.py  test_polyline.py  test_rectangle_aliases.py  test_rectangle_rounded.py  test_regular_polygon.py  test_scale.py  test_section_split_project.py  test_sheet_metal.py  (+10 more)
(+118 files in other folders)
