[tool.poetry]
name = "cadbuildr-foundation"
version = "0.0.0.14"
description = "Python core package for cadbuildr"
authors = ["Clement Jambou"]
packages = [
    { include = "cadbuildr" }
]
license = "MIT"
homepage = "https://cadbuildr.com"
repository = "https://github.com/cadbuildr/foundation"
keywords = ["cad", "3d", "modeling"]
classifiers = [
    "Development Status :: 4 - Beta",  # Or appropriate status
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",  # Or your license
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
websocket-client = "^1.7.0"
mypy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytransform3d = "==1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"