[tool.poetry]
name = "cadbuildr-foundation"
version = "0.2.4"
description = "Foundation library for CADbuildr - Core types for parametric CAD"
authors = ["CADbuildr Team"]
readme = "README.md"
packages = [{include = "cadbuildr"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
requests = "^2.31.0"
numpy = "^1.23.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
graphql-core = "^3.2.3"

# [tool.poetry.scripts]
# build = "cadbuildr.foundation.cli:main"
# get-screenshot = "cadbuildr.foundation.cli:get_screenshot_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
