[project]
name = "cadbuildr-foundation"
version = "0.2.6"
description = "Foundation library for CADbuildr - Core types for parametric CAD"
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
authors = [
    {name = "CADbuildr Team"},
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "numpy>=2.2.6,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "graphql-core>=3.2.3,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "cadbuildr",
]

[build-system]
requires = [
    "hatchling>=1.27.0",
]
build-backend = "hatchling.build"
